force-app/main/default/objects/Application_Underwriting__c/Application_Underwriting__c.object-meta.xml
<CustomObject>
    <label>Application Underwriting</label>
    <nameField>
        <displayFormat>AU-{00000}</displayFormat>
        <label>Application Underwriting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications Underwriting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>