force-app/main/default/objects/Application_Underwriting__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Applications__c</referenceTo>
    <relationshipLabel>Applications Underwriting</relationshipLabel>
    <relationshipName>Applications_Underwriting</relationshipName>
    <type>Lookup</type>
</CustomField>