force-app/main/default/objects/Application_Underwriting__c/fields/Article_of_Incorporation_document__c.field-meta.xml
<CustomField>
    <fullName>Article_of_Incorporation_document__c</fullName>
    <formula>Application__r.Account__r.Article_of_Incorporation_document__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article of Incorporation document</label>
    <type>Text</type>
</CustomField>