force-app/main/default/objects/Application_Underwriting__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <formula>Application__r.Broker_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank</label>
    <type>Text</type>
</CustomField>