force-app/main/default/objects/Application_Underwriting__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications Underwriting</relationshipLabel>
    <relationshipName>Applications_Underwriting</relationshipName>
    <type>Lookup</type>
</CustomField>