force-app/main/default/objects/Application_Underwriting__c/fields/Employer_identification_number_document__c.field-meta.xml
<CustomField>
    <fullName>Employer_identification_number_document__c</fullName>
    <formula>Application__r.Account__r.Employer_identification_number_document__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer identification number document</label>
    <type>Text</type>
</CustomField>