force-app/main/default/objects/Application_Underwriting__c/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <formula>Application__r.Factor_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>