force-app/main/default/objects/Application_Underwriting__c/fields/First_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Amount__c</fullName>
    <formula>Application__r.Max_Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>