force-app/main/default/objects/Application_Underwriting__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <formula>Application__r.Date_Business_Established__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>