force-app/main/default/objects/Application_Underwriting__c/fields/Formation_Date__c.field-meta.xml
<CustomField>
    <fullName>Formation_Date__c</fullName>
    <formula>Application__r.Account__r.Business_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formation Date</label>
    <type>Date</type>
</CustomField>