force-app/main/default/objects/Application_Underwriting__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <formula>Text(Application__r.Loan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Type</label>
    <type>Text</type>
</CustomField>