force-app/main/default/objects/Application_Underwriting__c/fields/Is_Open_Stip__c.field-meta.xml
<CustomField>
    <fullName>Is_Open_Stip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Open Stip</label>
    <type>Checkbox</type>
</CustomField>