force-app/main/default/objects/Application_Underwriting__c/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <formula>TEXT( Application__r.Account__r.Business_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Type</label>
    <type>Text</type>
</CustomField>