force-app/main/default/objects/Application_Underwriting__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <formula>&apos;Underwriting&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module</label>
    <type>Text</type>
</CustomField>