force-app/main/default/objects/Application_Underwriting__c/fields/Place_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Incorporation__c</fullName>
    <formula>Application__r.Account__r.State_of_Incorporation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Incorporation</label>
    <type>Text</type>
</CustomField>