force-app/main/default/objects/Application_Underwriting__c/fields/Proposed_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Funding_Date__c</fullName>
    <formula>Application__r.Date_Business_Established__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Funding Date</label>
    <type>Date</type>
</CustomField>