force-app/main/default/objects/Application_Underwriting__c/fields/Reason_for_Loan__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Loan__c</fullName>
    <formula>Text(Application__r.Use_of_Funds__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason for Loan</label>
    <type>Text</type>
</CustomField>