force-app/main/default/objects/Application_Underwriting__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
                <default>true</default>
                <label>In Review</label>
            </value>
            <value>
                <fullName>KYC Review</fullName>
            </value>
            <value>
                <fullName>Borrower Entity Review</fullName>
            </value>
            <value>
                <fullName>Loan Docs Review</fullName>
            </value>
            <value>
                <fullName>Funding Docs Review</fullName>
            </value>
            <value>
                <fullName>Bank Statement Review</fullName>
            </value>
            <value>
                <fullName>FICO Review</fullName>
            </value>
            <value>
                <fullName>Asset Review</fullName>
            </value>
            <value>
                <fullName>Liabilities Review</fullName>
            </value>
            <value>
                <fullName>Collateral Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>