force-app/main/default/objects/Application_Underwriting__c/fields/State_of_Domicile__c.field-meta.xml
<CustomField>
    <fullName>State_of_Domicile__c</fullName>
    <formula>Application__r.Account__r.State_of_Incorporation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State of Domicile</label>
    <type>Text</type>
</CustomField>