force-app/main/default/objects/Application_Underwriting__c/fields/Statement_of_Information_document__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Information_document__c</fullName>
    <formula>Application__r.Account__r.Statement_of_Information_document__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statement of Information document</label>
    <type>Text</type>
</CustomField>