force-app/main/default/objects/Application_Underwriting__c/fields/Underwriting_Division__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Underwriting Division</label>
    <referenceTo>Underwriting_Division__c</referenceTo>
    <relationshipLabel>Applications Underwriting</relationshipLabel>
    <relationshipName>Applications_Underwriting</relationshipName>
    <type>Lookup</type>
</CustomField>