force-app/main/default/objects/Application_Underwriting__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <formula>Application__r.Physical_Address_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse</label>
    <type>Text</type>
</CustomField>