force-app/main/default/objects/Application_Underwriting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Underwriting_Division__c</columns>
    <columns>Stages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>