force-app/main/default/objects/Application_Underwriting__c/listViews/Business_Division_Application_Underwriting.listView-meta.xml
<ListView>
    <fullName>Business_Division_Application_Underwriting</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Division</label>
    <queue>Business_Division</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>