force-app/main/default/objects/Application_Underwriting__c/listViews/Credit_Division_Application_Underwriting.listView-meta.xml
<ListView>
    <fullName>Credit_Division_Application_Underwriting</fullName>
    <filterScope>Queue</filterScope>
    <label>Credit Division</label>
    <queue>Credit_Division</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>