force-app/main/default/objects/Application_Underwriting__c/listViews/Legal_Division_Application_Underwriting.listView-meta.xml
<ListView>
    <fullName>Legal_Division_Application_Underwriting</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Division</label>
    <queue>Legal_Division</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>